# GormBot

./: .gitignore  LICENSE  main.py  pyproject.toml
db/: CommissionConnection.py  ConfigConnection.py  DatabaseConnection.py  DatabaseManager.py  DatabaseSchema.py  TicketConnection.py  __init__.py
docs/superpowers/plans/: 2026-06-20-commission-billing.md
modules/: AuditSystem.py  BillingSystem.py  CommissionTracking.py  ConfigSystem.py  TicketSystem.py  WelcomeSystem.py
tests/: test_commission.py  test_config.py
utils/: Constants.py  GormBot.py  __init__.py
